force-app/main/default/objects/Transaction_Complaint__b/Transaction_Complaint__b.object-meta.xml
<CustomObject>
    <indexes>
        <fullName>Base_Index</fullName>
        <fields>
            <name>Subscription__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>SFID__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Base Index</label>
    </indexes>
    <label>Transaction Complaint</label>
    <pluralLabel>Transaction Complaints</pluralLabel>
</CustomObject>