force-app/main/default/objects/Transaction_Complaint__b/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>