force-app/main/default/objects/Transaction_Complaint__b/fields/Delivery_Code__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Code__c</fullName>
        <label>Delivery Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>