force-app/main/default/objects/Transaction_Complaint__b/fields/Dispatch_Notes__c.field-meta.xml
<CustomField>
        <fullName>Dispatch_Notes__c</fullName>
        <label>Dispatch Notes</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>