force-app/main/default/objects/Transaction_Complaint__b/fields/Last_Date__c.field-meta.xml
<CustomField>
        <fullName>Last_Date__c</fullName>
        <label>Last Date</label>
        <type>DateTime</type>
    </CustomField>