force-app/main/default/objects/Transaction_Complaint__b/fields/Offer_Product__c.field-meta.xml
<CustomField>
        <fullName>Offer_Product__c</fullName>
        <label>Offer Product</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>