force-app/main/default/objects/Transaction_Complaint__b/fields/Redelivery_Requested__c.field-meta.xml
<CustomField>
        <fullName>Redelivery_Requested__c</fullName>
        <label>Redelivery Requested</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>