force-app/main/default/objects/Transaction_Complaint__b/fields/Route__c.field-meta.xml
<CustomField>
        <fullName>Route__c</fullName>
        <description>Id of the route record this complaint is related to.</description>
        <label>Route</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>