force-app/main/default/objects/Transaction_Complaint__b/fields/SFID__c.field-meta.xml
<CustomField>
        <fullName>SFID__c</fullName>
        <description>Id of original transaction of this record.</description>
        <label>SFID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>