force-app/main/default/objects/Transaction_Complaint__b/fields/Transaction_Date__c.field-meta.xml
<CustomField>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </CustomField>