force-app/main/default/objects/Transaction_Complaint__b/fields/Trouble__c.field-meta.xml
<CustomField>
        <fullName>Trouble__c</fullName>
        <label>Trouble</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>